# agent-atuin

./: install.sh
.claude/rules/: memory-crate.md  rust-conventions.md  testing.md
.github/workflows/: release.yml
crates/atuin/: Cargo.toml
crates/atuin-client/migrations/: 20260216000000_add_agent_id.sql
crates/atuin-client/src/: database.rs  encryption.rs  history.rs
crates/atuin-client/src/history/: builder.rs  store.rs
crates/atuin-memory/: Cargo.toml
crates/atuin-memory/src/: database.rs  lib.rs
crates/atuin/src/command/: client.rs
crates/atuin/src/command/client/: daemon.rs  doctor.rs  history.rs  import.rs  kv.rs  memory.rs  search.rs  stats.rs  store.rs  sync.rs
crates/atuin/src/command/client/search/: inspector.rs
docs/: AGENT_SETUP.md
